# SolanaExamples

./: .gitignore  Cargo.toml  README.md  justfile
.circleci/: ReleaseCheckAndTrigger_solana.py  config.yml
BlogExample/: README.md
BlogExample/IntegrityOfMint/: Cargo.toml
BlogExample/IntegrityOfMint/certora/: IntegrityOfProcessMintTo.conf  IntegrityOfProcessMintToFalse.conf
BlogExample/IntegrityOfMint/src/certora/: IntegrityOfProcessMintTo.conf  IntegrityOfProcessMintToFalse.conf  expectedIntegrityOfProcessMintTo.json  expectedIntegrityOfProcessMintToFalse.json
cvlr_by_example/cpis/: Cargo.toml  certora_build.py  justfile
cvlr_by_example/cpis/certora/: cvlr_inlining.txt  cvlr_summaries.txt
cvlr_by_example/cpis/certora/conf/: Default.conf  justfile
cvlr_by_example/cpis/src/: lib.rs  processor.rs
cvlr_by_example/cpis/src/certora/: macros.rs  spec.rs
cvlr_by_example/first_example/: Cargo.toml  certora_build.py  justfile
cvlr_by_example/first_example/certora/conf/: Default.conf  MultiAssertMode.conf  expectedDefault.json  expectedMultiAssertMode.json
cvlr_by_example/first_example/src/certora/spec/: checks.rs  mod.rs
cvlr_by_example/vault_application/: Cargo.toml  certora_build.py  justfile
cvlr_by_example/vault_application/certora/conf/: Default.conf
cvlr_by_example/vault_application/src/: lib.rs  processor.rs  state.rs
cvlr_by_example/vault_application/src/certora/: macros.rs  spec.rs
first_example/: Cargo.toml  certora_build.py
first_example/certora/conf/: Default.conf
first_example/src/certora/spec/: checks.rs
just/: README.md  certoraSolanaProver.just
