[package]
name = "first_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = [
    "dep:cvt",
    "dep:nondet",
    "dep:cvt-macros",
    "dep:calltrace",
    "dep:hook_macro",
]

[dependencies]
nondet = { workspace = true, optional = true, features = ["derive"] }
cvt = { workspace = true, optional = true }
cvt-macros = { workspace = true, optional = true }
calltrace = { workspace = true, optional = true }
hook_macro = { workspace = true, optional = true }
